deployment/deployment_server.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: pyserver
spec:
  servers:
    - hosts:
        - "*"
      port:
        name: http
        number: 80
        protocol: HTTP
  selector:
    istio: ingressgateway

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pyserver
spec:
  hosts:
    - "*"
  gateways:
    - pyserver
  http:
  - match:
    - uri:
        exact: /index
    route:
    - destination:
        port:
          number: 80
        host: pyserver

---
apiVersion: v1
kind: Service
metadata:
  name: pyserver
  labels:
    app: pyserver
spec:
  ports:
  - name: pyserver
    port: 80
    targetPort: 5000
  selector:
    app: pyserver
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pyserver
  labels:
    app: pyserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pyserver
  template:
    metadata:
      labels:
        app: pyserver
    spec:
      containers:
      - image: pyserver:latest
        imagePullPolicy: IfNotPresent
        name: pyserver
        ports:
        - name: pyserver
          containerPort: 5000
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: sleep
  labels:
    app: sleep
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: sleep
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sleep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sleep
  template:
    metadata:
      annotations:
        # This annotation causes Envoy to serve cluster.outbound statistics via 15000/stats
        # in addition to the stats normally served by Istio.  The Circuit Breaking example task
        # gives an example of inspecting Envoy stats.
        sidecar.istio.io/statsInclusionPrefixes: cluster.outbound,cluster_manager,listener_manager,http_mixer_filter,tcp_mixer_filter,server,cluster.xds-grpc
      labels:
        app: sleep
    spec:
      serviceAccountName: sleep
      containers:
      - name: sleep
        image: governmentpaas/curl-ssl
        command: ["/bin/sleep", "3650d"]
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /etc/sleep/tls
          name: secret-volume
      volumes:
      - name: secret-volume
        secret:
          secretName: sleep-secret
          optional: true
