deployment/virtualservice_delay.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pyserver
spec:
  hosts:
    - pyserver.timeouts.svc.cluster.local
    - pyserver
    # - "*"
  gateways:
    - mesh
    - pyserver
  http:
  - match:
    - uri:
        exact: /index
    fault:
      delay:
        percent: 100
        fixedDelay: 2s
    route:
    - destination:
        port:
          number: 80
        host: pyserver
