deployment/virtualservice_timeout.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pyclient
spec:
  hosts:
    - "*"
  gateways:
    - pyclient
  http:
  - match:
    - uri:
        exact: /home
    route:
    - destination:
        port:
          number: 80
        host: pyclient
    timeout: 0.5s
